# meta-llama-hackathon

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.cursor/rules/: rule.mdc
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/db/: __init__.py  id_generators.py  notes.py  questions.py  quizzes.py  source_mat.py
backend/app/pydantic_models/: multiplayer.py  multiselect_question.py  notes.py  question.py  quiz.py  score.py  source_mat.py
backend/app/router/: instance.py
backend/app/router/endpoints/: answers.py  notes.py  questions.py  quizes.py  quizzes.py  users.py
backend/app/utils/: __init__.py  tools.py
backend/notes/: Notes on Decoders 1597cb35b916808c8505def0924e913f.md  Notes on Transforms d557c60e03b64da285174f30cb0e2c18.md  test.txt
frontend/: .cta.json  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  NotesGraph.tsx
frontend/src/context/: index.tsx
frontend/src/hooks/: notes.ts
frontend/src/routes/: __root.tsx  game-mode.tsx  index.tsx  notes.tsx  profile.tsx  quiz-selection.tsx  quizzes.tsx  test-create-multiselect.tsx  test-create-shortanswer.tsx
frontend/src/routes/notes/: $slug.tsx  index.tsx
frontend/src/routes/quizzes/: index.tsx
frontend/src/styles/: effects.css
frontend/src/types/: speech-recognition.d.ts
frontend/src/utils/: client.ts
frontend/utils/: client  client.ts
