[tool.poetry]
name = "llama-backend"
version = "0.1.0"
description = ""
authors = ["Juan Maturino <juanjmaturino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
firecrawl-py = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
